Updated alignment of next, back buttons and fixed styling

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -95,7 +95,6 @@ h2{
   border-color: #fed136;
   color: #404040;
   float: right;
-  margin: 20px;
   padding: 8px !important;
 }
 .back {
@@ -103,9 +102,13 @@ h2{
   border-color: #404040;
   color: white;
   float: left;
-  margin: 20px;
   padding: 8px !important;
 }
+
+.back, .next{
+  margin-bottom:10px;
+}
+
 .hidden {
   display: none;
 }
